--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+   "tunnel":"ngrok http 3000"
+    
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.4",
@@ -15,10 +17,11 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.6",
-    "a": "^3.0.1",
+    
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
+   
     "package": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
