--- a/package.json
+++ b/package.json
@@ -8,23 +8,32 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-   "tunnel":"ngrok http 3000"
-    
+    "tunnel": "ngrok http 3000"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.0",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^1.9.6",
-    
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
-   
+    "multer": "^1.4.5-lts.1",
     "package": "^1.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-config": "^1.5.1",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-file-picker": "^0.0.21",
+    "react-native-gesture-handler": "^2.13.2",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.8.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
