--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: 'com.google.gms.google-services'
+// apply plugin: "com.google.gms.google-services"
+
+// plugins {
+//   id("com.android.application")
+// // firebase setup plugins
+//   // Add the Google services Gradle plugin
+//   id("com.google.gms.google-services")
+// }
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -103,22 +112,31 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
+            // storeFile file("my-release-key.keystore")
+            // storePassword "bikramdhami"
+            // keyAlias "my-key-alias"
+            // keyPassword "bikramdhami"
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+
         }
     }
 }
 
 dependencies {
+    implementation project(':react-native-document-picker')
+implementation 'com.google.firebase:firebase-analytics'
+        //  compile project(':react-native-file-picker')
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+implementation platform('com.google.firebase:firebase-bom:32.3.1')
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
+
     }
 
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
@@ -127,6 +145,19 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
+    implementation("com.google.firebase:firebase-analytics")
+//       implementation(project(':react-native-onesignal')){
+//       exclude group: 'com.google.android.gms'
+//   }
+  
+
+//   implementation(project(':react-native-maps')){
+//       exclude group: 'com.google.android.gms'
+//   }
+//   implementation 'com.google.android.gms:play-services-base:18.0.1'
+//   implementation 'com.google.android.gms:play-services-location:19.0.1'
+//   implementation 'com.google.android.gms:play-services-maps:18.0.2'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
