--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+
+        <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <!-- add following permissions -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  
 
     <application
       android:name=".MainApplication"
@@ -20,6 +25,11 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+ 
       </activity>
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value='AIzaSyAv5qZjl3RChSPewEzs5qPq_kftKkzGkPI'/>
     </application>
 </manifest>
