--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// plugins {
+//   // ...
+// //firebase plugins setup
+//   // Add the dependency for the Google services Gradle plugin
+//   id("com.google.gms.google-services") version "4.4.0" apply false
 
+// }
+// apply plugin:"com.google.gms.google-services"
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
@@ -17,5 +24,6 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
