--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ android {
 }
 
 dependencies {
+     implementation project(':react-native-fs')
     implementation project(':react-native-document-picker')
 implementation 'com.google.firebase:firebase-analytics'
         //  compile project(':react-native-file-picker')
