--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-        <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+ <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- add following permissions -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  
-
+    <!-- +   <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" /> -->
+<!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
+<uses-permission android:name="android.premission.CAMERA"/>
+<!-- <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" /> -->
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -24,6 +29,8 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+             <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
+
         </intent-filter>
  
       </activity>
