--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.8.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.5.0",
+    "@react-native-firebase/storage": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
@@ -31,6 +35,7 @@
     "react-native-config": "^1.5.1",
     "react-native-document-picker": "^9.0.1",
     "react-native-file-picker": "^0.0.21",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.8.0",
@@ -40,7 +45,8 @@
     "react-native-screens": "^3.25.0",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.3",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
