--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start && newcomp/backend/nodemon index.js",
     "test": "jest",
     "tunnel": "ngrok http 3000"
   },
@@ -38,12 +38,15 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-maps": "^1.8.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-video": "^5.2.1",
     "react-redux": "^8.1.3",
     "redux-saga": "^1.2.3",
     "rn-fetch-blob": "^0.12.0"
